# universal-rag-evaluator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.agents/skills/universal-rag-evaluator/: SKILL.md
.agents/skills/universal-rag-evaluator/references/: experiment-checklist.md
.github/workflows/: ci.yml
docs/: adapters.md  data-contract.md  methodology.md  research-methods.md
examples/: gold.jsonl  judge_labels.jsonl  run_a.jsonl  run_b.jsonl
scripts/: publish_to_github.sh
src/rageval_lab/: __init__.py  calibration.py  cli.py  diagnostics.py  evaluate.py  io.py  manifest.py  metrics.py  report.py  stats.py  validate.py
tests/: test_compare.py  test_diagnostics_calibration.py  test_metrics.py
